--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
             <version>1.6.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.dropbox.core</groupId>
+            <artifactId>dropbox-core-sdk</artifactId>
+            <version>3.0.5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
